--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,3 +4,247 @@ log_level: 'info'
 server:
   address: '0.0.0.0'
   port: 8156
+
+quiz:
+  amount_of_questions: 10
+  questions:
+    - id: 1
+      question:
+        en: "How many doors does an Advent calendar have?"
+        de: "Wie viele Türchen hat ein Adventskalender?"
+      answers:
+        en: ["17", "24", "30"]
+        de: ["17", "24", "30"]
+      correct_answer: 1
+    - id: 2
+      question:
+        en: "What is celebrated at Christmas?"
+        de: "Was wird an Weihnachten gefeiert?"
+      answers:
+        en: ["Angels getting married", "Reindeer having birthdays", "The birth of Jesus Christ"]
+        de: ["Die Engel heiraten", "Die Rentiere haben Geburtstag", "Die Geburt von Jesus Christus"]
+      correct_answer: 2
+    - id: 3
+      question:
+        en: "What does Santa bring to naughty children?"
+        de: "Was bringt der Weihnachtsmann den unartigen Kindern?"
+      answers:
+        en: ["A rod/switch", "Hard nuts", "Cookies"]
+        de: ["Eine Rute", "Harte Nüsse", "Kekse"]
+      correct_answer: 0
+    - id: 4
+      question:
+        en: "Which animals pull Santa's sleigh?"
+        de: "Welche Tiere ziehen den Schlitten vom Weihnachtsmann?"
+      answers:
+        en: ["Huskies", "Horses", "Reindeer"]
+        de: ["Huskies", "Pferde", "Rentiere"]
+      correct_answer: 2
+    - id: 5
+      question:
+        en: "Which animals were in the stable of the baby Jesus' manger?"
+        de: "Welche Tiere standen im Stall der Krippe des Jesuskindes?"
+      answers:
+        en: ["Ox and donkey", "Cow and camel", "Dog and cat"]
+        de: ["Ochs und Esel", "Kuh und Kamel", "Hund und Katze"]
+      correct_answer: 0
+    - id: 6
+      question:
+        en: "What are the names of the three wise men?"
+        de: "Wie heißen die Heiligen drei Könige?"
+      answers:
+        en: ["Nicholas, Matthew and Joseph", "Caspar, Melchior and Balthasar", "Andreas, Augustus and Abraham"]
+        de: ["Nikolaus, Matthäus und Joseph", "Caspar, Melchior und Balthasar", "Andreas, Augustus und Abraham"]
+      correct_answer: 1
+    - id: 7
+      question:
+        en: "Knecht Ruprecht is..."
+        de: "Knecht Ruprecht ist..."
+      answers:
+        en: ["St. Nicholas' helper", "A mean adversary of Santa", "An invention by Christian Andersen in a fairy tale"]
+        de: ["Der Gehilfe des Nikolaus", "Ein fieser Widersacher des Weihnachtsmannes", "Eine Erfindung von Christian Andersen in einem Märchen"]
+      correct_answer: 0
+    - id: 8
+      question:
+        en: "How many needles does an average (1.70m tall) Christmas tree have?"
+        de: "Wie viele Nadeln hat ein durchschnittlicher (1,70 m großer) Weihnachtsbaum?"
+      answers:
+        en: ["470,000", "690,000", "180,000"]
+        de: ["470.000", "690.000", "180.000"]
+      correct_answer: 2
+    - id: 9
+      question:
+        en: "What do the British call the second day of Christmas (December 26th)?"
+        de: "Wie nennen die Briten den 2. Weihnachtstag (26.12.)?"
+      answers:
+        en: ["Boxing Day", "Reindeer Day", "Santa Day"]
+        de: ["Boxing Day", "Rendeer Day", "Santa Day"]
+      correct_answer: 0
+    - id: 10
+      question:
+        en: "Who invented the Advent calendar?"
+        de: "Wer hat den Adventskalender erfunden?"
+      answers:
+        en: ["The Romans around 400 AD", "An English pastor in the 19th century", "The chocolate industry in the 20th century"]
+        de: ["Die Römer etwa 400 n. Chr.", "Ein englischer Pfarrer im 19. Jahrhundert", "Die Schokoladenindustrie im 20. Jahrhundert"]
+      correct_answer: 1
+    - id: 11
+      question:
+        en: "Who distributes gifts in Iceland?"
+        de: "Wer verteilt in Island die Geschenke?"
+      answers:
+        en: ["The 13 Christmas trolls called Jólasveinar", "Santa called Jólasveinn", "The 21 volcano elves called Eldfjallálfar"]
+        de: ["Die 13 Weihnachtstrolle, genannt Jólasveinar", "Der Weihnachtsmann, genannt Jólasveinn", "Die 21 Vulkanelfen, genannt Eldfjallálfar"]
+      correct_answer: 0
+    - id: 12
+      question:
+        en: "Who composed the song 'White Christmas'?"
+        de: "Wer hat das Lied 'White Christmas' komponiert?"
+      answers:
+        en: ["Johnny Cash", "Irving Berlin", "Nat King Cole"]
+        de: ["Johnny Cash", "Irving Berlin", "Nat King Cole"]
+      correct_answer: 1
+    - id: 13
+      question:
+        en: "What color was Santa's coat before Coca Cola dressed him in red?"
+        de: "Welche Farbe hatte der Mantel des Weihnachtsmannes, bevor ihn Coca Cola rot einkleidete?"
+      answers:
+        en: ["White", "Gold", "Blue"]
+        de: ["Weiß", "Gold", "Blau"]
+      correct_answer: 2
+    - id: 14
+      question:
+        en: "Which islands don't exist?"
+        de: "Welche Inseln gibt es nicht?"
+      answers:
+        en: ["Christmas Islands", "Advent Islands", "Easter Islands"]
+        de: ["Weihnachtsinseln", "Adventsinseln", "Osterinseln"]
+      correct_answer: 1
+    - id: 15
+      question:
+        en: "When was Christmas first celebrated?"
+        de: "Wann wurde zum ersten Mal Weihnachten gefeiert?"
+      answers:
+        en: ["In the 4th century", "In the 15th century", "In the year 3 after Christ's birth"]
+        de: ["im 4. Jahrhundert", "im 15. Jahrhundert", "im Jahre 3 nach Christi Geburt"]
+      correct_answer: 0
+    - id: 16
+      question:
+        en: "Which Asian country is the only one where Christmas is a public holiday?"
+        de: "Welches asiatische Land ist das einzige, in dem Weihnachten ein Feiertag ist?"
+      answers:
+        en: ["China", "South Korea", "Malaysia"]
+        de: ["China", "Südkorea", "Malaysia"]
+      correct_answer: 1
+    - id: 17
+      question:
+        en: "What does 'Merry Christmas' mean in Spanish?"
+        de: "Was heißt 'Frohe Weihnachten' auf Spanisch?"
+      answers:
+        en: ["Muchas Gracias", "Feliz Navidad", "Bienvenidos"]
+        de: ["Muchas Gracias", "Feliz Navidad", "Bienvenidos"]
+      correct_answer: 1
+    - id: 18
+      question:
+        en: "What is a legendary Christmas dish from Great Britain called?"
+        de: "Wie heißt ein legendäres Weihnachtsgericht aus Großbritannien?"
+      answers:
+        en: ["Santa Cheese Boots", "Jelly Bag Cap Cake", "Christmas pudding"]
+        de: ["Santa Cheese Boots (Weihnachtsmann-Käse-Stiefel)", "Jelly Bag Cap Cake (Zipfelmützenkekse)", "Plumpudding (Weihnachtspudding)"]
+      correct_answer: 2
+    - id: 19
+      question:
+        en: "What are the children looking forward to in the song 'Let us be happy and cheerful'?"
+        de: "Worauf freuen sich die Kinder im Lied 'Lasst uns froh und munter sein'?"
+      answers:
+        en: ["St. Nicholas evening", "First Advent", "Christmas Eve"]
+        de: ["Nikolausabend", "Erster Advent", "Heiligabend"]
+      correct_answer: 0
+    - id: 20
+      question:
+        en: "In the Christmas bakery there's..."
+        de: "In der Weihnachtsbäckerei gibt's..."
+      answers:
+        en: ["A forgotten Easter egg", "Many a delicacy", "A huge celebration"]
+        de: ["Ein vergessenes Osterei", "So manche Leckerei", "Ein riesen Fest"]
+      correct_answer: 1
+    - id: 21
+      question:
+        en: "What is a nativity play?"
+        de: "Was ist ein Krippenspiel?"
+      answers:
+        en: ["An old musical instrument", "A play performed at Christmas", "A Christmas board game for the whole family"]
+        de: ["Ein altes Musikinstrument", "Ein Theaterstück, das zu Weihnachten aufgeführt wird", "Ein weihnachtliches Brettspiel für die ganze Familie"]
+      correct_answer: 1
+    - id: 22
+      question:
+        en: "What's special about the Finnish Santa Joulupukki?"
+        de: "Was ist das Besondere am finnischen Weihnachtsmann Joulupukki?"
+      answers:
+        en: ["He has no beard", "He is married", "He has no red coat"]
+        de: ["Er hat keinen Bart", "Er ist verheiratet", "Er hat keinen roten Mantel"]
+      correct_answer: 1
+    - id: 23
+      question:
+        en: "Where does the poinsettia plant come from?"
+        de: "Woher stammt die Pflanze Weihnachtsstern?"
+      answers:
+        en: ["From the Mohawk of North America", "From the Aborigines of Australia", "From the Aztecs of Mexico"]
+        de: ["Von den Mohawk aus Nordamerika", "Von den Aborigines aus Australien", "Von den Azteken aus Mexiko"]
+      correct_answer: 2
+    - id: 24
+      question:
+        en: "In Finland, children run from house to house before Christmas dressed as..."
+        de: "In Finnland laufen die Kinder vor Weihnachten von Haus zu Haus. Dabei verkleiden sie sich als..."
+      answers:
+        en: ["Elves", "Reindeer", "Santa"]
+        de: ["Elf/e", "Rentier", "Weihnachtsmann"]
+      correct_answer: 0
+    - id: 25
+      question:
+        en: "Where did the idea for the song 'Rudolph The Red-Nosed Reindeer' come from?"
+        de: "Woher kam die Idee zum Lied 'Rudolph The Red Nose Reindeer'?"
+      answers:
+        en: ["From the eighth American President Martin van Buren", "From composer Johnny Marks", "From a children's coloring book"]
+        de: ["Vom achten amerikanischen Präsidenten Martin van Buren", "Vom Komponisten Johnny Marks", "Aus einem Kindermalbuch"]
+      correct_answer: 2
+    - id: 26
+      question:
+        en: "Where does the Christmas Child come from?"
+        de: "Woher kommt das weihnachtliche Christkind?"
+      answers:
+        en: ["Martin Luther introduced it in the 16th century", "It comes from Christmas customs in Scandinavia", "It's an invention by Walt Disney"]
+        de: ["Martin Luther führte es im 16. Jahrhundert ein", "Es stammt aus den Weihnachtsbräuchen in Skandinavien", "Es ist eine Erfindung von Walt Disney"]
+      correct_answer: 0
+    - id: 27
+      question:
+        en: "What is marzipan made from?"
+        de: "Woraus wird Marzipan gemacht?"
+      answers:
+        en: ["Walnuts", "Dates", "Almonds"]
+        de: ["Walnüsse", "Datteln", "Mandeln"]
+      correct_answer: 2
+    - id: 28
+      question:
+        en: "How many Christmas songs are there approximately according to the Office for Christmas Songs in Graz?"
+        de: "Wie viele Weihnachtslieder gibt es ungefähr laut dem Büro für Weihnachtslieder in Graz?"
+      answers:
+        en: ["30,000", "3,000", "300"]
+        de: ["30.000", "3.000", "300"]
+      correct_answer: 0
+    - id: 29
+      question:
+        en: "How many candles did the Advent wreath have when it was invented?"
+        de: "Wie viele Kerzen hatte der Adventskranz bei seiner Erfindung?"
+      answers:
+        en: ["23", "It was always 4 from the beginning", "1, in rare cases 2"]
+        de: ["23", "Von Anfang an waren es 4", "1, in seltenen Fällen 2"]
+      correct_answer: 0
+    - id: 30
+      question:
+        en: "What percentage of alcohol must mulled wine contain in Germany to be called mulled wine?"
+        de: "Wie viel Prozent Alkohol muss Glühwein in Deutschland mind. enthalten, um ihn Glühwein nennen zu dürfen?"
+      answers:
+        en: ["12%", "7%", "There is no regulation for this"]
+        de: ["12%", "7%", "Es gibt hierfür keine Vorschrift"]
+      correct_answer: 1
