--- a/compose.yml
+++ b/compose.yml
@@ -36,3 +36,12 @@ services:
     entrypoint: go
     volumes:
       - .:/app/
+
+  types:
+    profiles:
+      - dev
+    image: node:25-alpine
+    working_dir: /app
+    command: sh -c "wget -qO- http://host.docker.internal:8156/api/openapi.json -O web/openapi.json && (cd /app/web && yarn && yarn types)"
+    volumes:
+      - ./:/app/
