--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "types": "openapi-ts"
   },
   "dependencies": {
     "vue": "^3.5.24",
@@ -15,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.17"
   },
   "devDependencies": {
+    "@hey-api/openapi-ts": "^0.87.2",
     "@types/node": "^24.10.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
