--- a/web/package.json
+++ b/web/package.json
@@ -10,19 +10,21 @@
     "types": "openapi-ts"
   },
   "dependencies": {
-    "vue": "^3.5.24",
+    "@tailwindcss/vite": "^4.1.17",
+    "@vueuse/core": "^14.0.0",
     "daisyui": "^5.5.0",
     "tailwindcss": "^4.1.17",
-    "@tailwindcss/vite": "^4.1.17"
+    "vue": "^3.5.24"
   },
   "devDependencies": {
     "@hey-api/openapi-ts": "^0.87.2",
+    "@iconify/vue": "^5.0.0",
     "@types/node": "^24.10.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "prettier": "^3.4.2",
     "typescript": "~5.9.3",
     "vite": "^7.2.2",
-    "vue-tsc": "^3.1.3",
-    "prettier": "^3.4.2"
+    "vue-tsc": "^3.1.3"
   }
 }
