Add CSS variables to app config and update assets
Introduced a new `css_variables` field in AppSettings (config.go) and added corresponding values in config.yaml for theme customization. Updated the logo.svg asset and reduced the default amount_of_questions from 10 to 5. Minor updates to web/openapi.json, Answers.vue, and main.ts to support these changes.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,11 +7,18 @@ server:
 
 app:
   title: 'Awesome Quiz'
-  amount_of_questions: 10
+  amount_of_questions: 5
   logo: '/app/config/logo.svg'
   languages:
     - 'en'
     - 'de'
+  css_variables:
+    --color-primary: '#ff473e'
+    --color-primary-content: '#ffffff'
+    --color-secondary: '#dee2e2'
+    --color-secondary-content: '#000000'
+    --color-accent: '#294221'
+    --color-accent-content: '#ffffff'
 
 questions:
   - id: 1
