--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -31,6 +31,8 @@ FROM golang:${V_GOLANG}-alpine AS final
 RUN apk add --update --no-cache dumb-init && \
     rm -rf /tmp/* /var/tmp/* /usr/share/man /var/cache/apk/*
 
+COPY ./config/logo.svg /logo.svg
+
 WORKDIR /app
 
 COPY --from=logo /app/logo.txt .
