--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,10 +1,6 @@
 ARG V_GOLANG=1.25.3
 ARG V_NODE=25
 ARG V_ALPINE=3
-FROM alpine:${V_ALPINE} AS logo
-WORKDIR /app
-RUN apk add figlet > /dev/null 2>&1
-RUN figlet Quiz > logo.txt
 
 FROM golang:${V_GOLANG}-alpine AS golang-builder
 WORKDIR /app
@@ -35,7 +31,7 @@ COPY ./config/logo.svg /logo.svg
 
 WORKDIR /app
 
-COPY --from=logo /app/logo.txt .
+COPY ./docker/mono-12.txt /mono-12.txt
 COPY --from=golang-builder /app/quiz .
 COPY --from=node-builder /app/dist/ ./web/
 COPY ./docker/entrypoint.sh .
