Add --no-scripts flag to apk add in Dockerfile
Updates the apk add command to use the --no-scripts flag, preventing execution of package installation scripts. This can improve build security and consistency.

--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -24,7 +24,7 @@ COPY ./web/ ./
 RUN yarn build
 
 FROM alpine:${V_ALPINE} AS final
-RUN apk update && apk add --no-cache tzdata dumb-init && \
+RUN apk update && apk add --no-cache --no-scripts tzdata dumb-init && \
     rm -rf /tmp/* /var/tmp/* /usr/share/man /var/cache/apk/*
 
 COPY ./config/logo.svg /logo.svg
